# recons

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: render.json  startup.txt
models/tests/empty/: .info
models/tests/invalid1/: .info
models/tests/invalid1/view1/: camera.json
models/tests/invalid1/view2/: camera.json
models/tests/invalid1/view3/: camera.json
models/tests/invalid2/: .info
models/tests/invalid2/view1/: camera.json
models/tests/invalid2/view2/: camera.json
models/tests/invalid2/view3/: camera.json
models/tests/invalid3/: .info
models/tests/invalid3/view1/: camera.json
models/tests/invalid4/: .info
models/tests/invalid5/view1/: .info
models/tests/invalid5/view10/: camera.json
models/tests/invalid5/view3/: camera.json
models/tests/invalid5/view4/: camera.json
models/tests/invalid5/view5/: camera.json
models/tests/invalid5/view6/: camera.json
models/tests/invalid5/view7/: camera.json
models/tests/invalid5/view8/: camera.json
models/tests/invalid5/view9/: camera.json
models/tests/valid/: .info
models/tests/valid/view1/: camera.json
models/tests/valid/view2/: camera.json
models/valid/cube/view2/: camera.json
models/valid/pipe/view3/: camera.json
models/valid/short_cross/view1/: camera.json
models/valid/someone/view4/: camera.json
models/valid/someone/view5/: camera.json
models/valid/someone/view6/: camera.json
src/: BaseModel.cpp  BaseModel.hpp  BaseView.cpp  BaseView.hpp  Main.cpp  Model.cpp  Model.hpp  ModelRender.cpp  ModelRender.hpp  Objects.cpp  View.cpp  View.hpp  VoxelModel.cpp  VoxelModel.hpp
tests/: CMakeLists.txt  TestsBaseModel.cpp  TestsBaseView.cpp
